# eclide

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CPackReadMe.txt  Config.h.in  LICENSE.txt  License.txt  README.md  cmakelists.txt  doBuildECLIDE.bat  doBuildHPCC-Platform.bat  doBuildLN.bat  doStageECLCC.bat  doStageECLIDE.bat.in  dobuild.bat  vcpkg-configuration.json  vcpkg.json  vcpkg_usage.txt  version.cmake
BugTrap/: CMakeLists.txt  cmakelists.txt
EclEditor/: CMakeLists.txt  Catalogue.cxx  LexDUD.cxx  LexECL.cxx  LexESDL.cxx  LexGENERAL.cxx  LexKEL.cxx  LexSALT.cxx  SciLexer.h  cmakelists.txt
EclLib/: CMakeLists.txt  DefinitionParser.cpp  DefinitionParser.h  EclErrorParser.cpp  EclErrorParser.h  EclLib.cpp  EclLib.h  EclLib.rc  EclParser.cpp  EclParser.h  SaltErrorParser.cpp  SaltErrorParser.h  UTCParser.cpp  UTCParser.h  VersionParser.cpp  VersionParser.h  cmakelists.txt  cmakelists.txtx  ecl_grammar.cpp  ecl_grammar.h  resource.h  stdafx.cpp  stdafx.h
amt/: AMT.cpp  AMT.h  AMT.rc  CMakeLists.txt  DependeesWnd.cpp  DependeesWnd.h  Filter.h  GraphView2.cpp  GraphView2.h  LogView.cpp  LogView.h  MainFrm2.cpp  MainFrm2.h  RepositoryCompareDlg.cpp  RepositoryCompareDlg.h  RepositoryCompareView.cpp  RepositoryCompareView.h  Selection.cpp  Selection.h  Status.h  TreePairNode.cpp  TreePairNode.h  cmakelists.txt  resource.h  stdafx.cpp  stdafx.h
amt/res/: AMT.rc2
clib/: CMakeLists.txt  Cache.h  CmdLine.cpp  CmdLine.h  ControlScroll.h  CustomMessages.h  DLLVersion.cpp  DLLVersion.h  DaFileSrv.cpp  DaFileSrv.h  GraphContainer.cpp  GraphContainer.h  GraphContainerImpl.cpp  GraphContainerImpl.h  GraphEdgeImpl.cpp  GraphEdgeImpl.h  GraphIteratorImpl.h  GraphSortedIndexContainer.cpp  GraphSortedIndexContainer.h  GraphSubgraphImpl.cpp  GraphSubgraphImpl.h  GraphTypes.cpp  GraphTypes.h  GraphVertexImpl.cpp  GraphVertexImpl.h  GridFocus.cpp  GridFocus.h  GridSelection.cpp  GridSelection.h  Hwprof.cpp  Hwprof.h  IEFileCache.cpp  IEFileCache.h  IPictureHelper.cpp  IPictureHelper.h  Iterators.h  LimitSingleInstance.cpp  LimitSingleInstance.h  LockableEventQueue.h  Logger.h  (+66 more)
comms/: Account.cpp  Account.h  Active.cpp  Active.h  Analysis.cpp  Analysis.h  Attribute.cpp  Attribute.h  AttributeHistory.cpp  AttributeHistory.h  AttributeImpl.h  AttributeType.cpp  AttributeType.h  Autoupdate.cpp  Autoupdate.h  CMakeLists.txt  Cluster.cpp  Cluster.h  Dali.cpp  Dali.h  Depository.h  DfuWorkunit.cpp  DfuWorkunit.h  DiskAttribute.cpp  DiskAttribute.h  DiskAttributeHistory.cpp  DiskModule.cpp  DiskModule.h  DiskMonitor.cpp  DiskMonitor.h  DiskRepository.cpp  DiskRepository.h  DropZone.cpp  DropZone.h  EclCC.cpp  EclCC.h  EclMeta.cpp  EclMeta.h  EclServer.cpp  EclServer.h  (+82 more)
comms/3_08/: Services.h  WsAccount.h  WsAttributesServiceSoap.nsmap  WsEclNet.h  WsTopology.wsdl  WsWorkunits.h  WsWorkunits.wsdl  Ws_Account.wsdl  envH.h  soapH.h  soapStub.h  soapWsAttributesServiceSoapProxy.cpp  soapWsDfuServiceSoapProxy.cpp  soapWsSMCServiceSoapProxy.cpp  soapWsSMCServiceSoapProxy.h  soapWsTopologyServiceSoapProxy.cpp  soapWsTopologyServiceSoapProxy.h  soapWsWorkunitsServiceSoapProxy.cpp  soapws_USCOREaccountServiceSoapProxy.cpp
comms/3_08-68200/: Services.h  WebService.cpp  WsAttributes.h  WsAttributes.wsdl  WsDfu.wsdl  WsDfuServiceSoap.nsmap  WsTopology.wsdl  Ws_Account.wsdl  soapStub.h  soapWsAttributesServiceSoapProxy.cpp  soapWsAttributesServiceSoapProxy.h  soapWsDfuServiceSoapProxy.h  soapWsSMCServiceSoapProxy.cpp  soapWsTopologyServiceSoapProxy.h  soapWsWorkunitsServiceSoapProxy.h  soapws_USCOREaccountServiceSoapProxy.cpp  soapws_USCOREaccountServiceSoapProxy.h
comms/4_02-68200/: Services.h  WsFileSpray.h  WsSMC.wsdl  WsTopology.h  envC.cpp  gsoap_build.bat  soapH.h  soapStub.h  soapWsAttributesServiceSoapProxy.cpp  soapWsDfuServiceSoapProxy.cpp  soapWsTopologyServiceSoapProxy.cpp  soapWsWorkunitsServiceSoapProxy.cpp
comms/68200/: Services.h  WebService.h  WsEntityEnhance.h  WsSEEP.h  soapH.h  soapStub.h  soapWsAttributesServiceSoapProxy.cpp  soapWsDfuServiceSoapProxy.cpp  soapWsSMCServiceSoapProxy.cpp  soapWsSMCServiceSoapProxy.h  soapWsTopologyServiceSoapProxy.cpp  soapWsTopologyServiceSoapProxy.h  soapWsWorkunitsServiceSoapProxy.cpp  soapWsWorkunitsServiceSoapProxy.h  soapws_USCOREaccountServiceSoapProxy.cpp
comms/68201/: Services.h  WebService.cpp  WebService.h  WsAttributesServiceSoap.nsmap  WsEntityClassify.h  envStub.h  gsoap_build.bat  soapH.h  soapStub.h  soapWsAttributesServiceSoapProxy.cpp  soapWsDfuServiceSoapProxy.cpp  soapWsSMCServiceSoapProxy.cpp  (+4 more)
comms/6_4_0/: Services.h  (+28 more)
eclide/: AttributeView.cpp  AttributeView.h  BasicExcel.cpp  BasicExcel.hpp  BookmarksFrame.cpp  BookmarksFrame.h  BookmarksView.cpp  BookmarksView.h  CMakeLists.txt  CSortMFCListCtrl.cpp  CSortMFCListCtrl.h  ChildAttributeFrame.cpp  ChildAttributeFrame.h  ChildBuilderFrame.cpp  ChildBuilderFrame.h  ChildEclFrame.cpp  ChildEclFrame.h  ChildFrame.cpp  ChildFrame.h  ChildGraphFrame.cpp  ChildGraphFrame.h  ChildResultFrame.cpp  ChildResultFrame.h  Combos.cpp  Combos.h  CommandManager.cpp  CommandManager.h  CommentDlg.cpp  CommentDlg.h  DataView.cpp  DataView.h  DebugGraphView.cpp  DebugGraphView.h  DebugView.cpp  DebugView.h  DfuFrame.cpp  DfuFrame.h  DfuTreeNode.cpp  DfuTreeNode.h  DfuView.cpp  (+111 more)
en_us/: CMakeLists.txt  cmakelists.txt  en_us.cpp  en_us.h  en_us.rc  resource.h  stdafx.cpp  stdafx.h
wlib/: AboutDlg.cpp  AboutDlg.h  AnalyzeXML.cpp  AnalyzeXML.h  AttrDependecy.cpp  AttrDependecy.h  AttrListDlg.cpp  AttrListDlg.h  AttributeDlg.cpp  AttributeDlg.h  CMakeLists.txt  CefClientHandler.cpp  CefClientHandler.h  ChangePasswordDlg.cpp  ChangePasswordDlg.h  ColorPicker.cpp  ColorPicker.h  Combo.cpp  Combo.h  ControlFocus.h  CtlColor.h  DaliTreeNode.cpp  DaliTreeNode.h  DelimitedColumnInfo.cpp  DelimitedColumnInfo.h  DiffView.cpp  DiffView.h  EclCommand.h  EclExec.cpp  EclExec.h  EclProgramManager.cpp  EclProgramManager.h  FileAnalyzer.cpp  FileAnalyzer.h  FindDlgMgr.h  FindReplace.h  GotoDlg.cpp  GotoDlg.h  HListBox.h  HtmlChromiumView.cpp  (+73 more)
zlib/: CMakeLists.txt  cmakelists.txt
(+361 files in other folders)
